# mismatch_compression

./: .gitignore  DifferentialLFPModel.ipynb  Dockerfile  OR_blackrock.py  OR_xltek.py  README.md  Z_mismatch.py  diff_model.py  example_simulation.py  pyproject.toml  raw_stim.py  requirements.txt  stim_sampled_harmonic_conv.py  tanh_sampling.py  temp_validation.py  untitled0.py  v_sweep_inter.py  v_sweep_validation.py
.devcontainer/: Dockerfile  devcontainer.json
Notebooks/: A1_DBS_WAVEFORM.ipynb  A1_EEG.ipynb  A1_MM_OR.ipynb  A1_MM_OR_XL.ipynb  DL_Overview.ipynb  DL_Sim.ipynb  DL_Stim_Freq.ipynb  DL_Stim_Mismatch.ipynb  DL_Validation.ipynb  DL_Zmismatch.ipynb  DL_validation.ipynb  DifferentialLFPModel.ipynb
Notebooks/.ipynb_checkpoints/: A1_MM_OR-checkpoint.ipynb  DL_Overview-checkpoint.ipynb  DL_Sim-checkpoint.ipynb  DL_Stim_Freq-checkpoint.ipynb  DL_Stim_Mismatch-checkpoint.ipynb
Notebooks/archive/: DL_Stim_Mismatch.ipynb  DL_Zmismatch.ipynb  TSFiltering.ipynb  Untitled.ipynb
analysis/.archive/: middle_x2_nullpotent.py  stim_artifact.py
analysis/impedances/: Z_mismatch.py  anatomy_corr.py
analysis/intraop/: OR_blackrock.py  OR_stim_waveform.py  OR_xltek.py
analysis/inversion/: tanh_inversion.py
analysis/invitro/: temp_validation.py  v_sweep_validation.py
analysis/simulated/: example_simulation.py  ipg_waveform.py  raw_stim.py  tanh_sampling.py
misc/: middle_x2_nullpotent.py  stim_artifact.py
notebooks/: A1_EEG.ipynb
notebooks/.archive/: DL_Stim_Mismatch.ipynb
notebooks/.ipynb_checkpoints/: A1_MM_OR_XL-checkpoint.ipynb
(+20 files in other folders)
